--- a/msvc/vs2017/cuda2GLCore.vcxproj.filters
+++ b/msvc/vs2017/cuda2GLCore.vcxproj.filters
@@ -48,5 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\kernel.cu" />
+    <CudaCompile Include="..\..\src\rayHelpers.cu" />
   </ItemGroup>
 </Project>
