--- a/msvc/vs2017/cuda2GLCore.vcxproj.filters
+++ b/msvc/vs2017/cuda2GLCore.vcxproj.filters
@@ -45,6 +45,7 @@
     <ClInclude Include="..\..\src\libs\helper_string.h">
       <Filter>cuda</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\sharedStructs.h" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\kernel.cu" />
