a lot of changes to accomodate new simple bloom effect

--- a/msvc/vs2017/cuda2GLCore.vcxproj
+++ b/msvc/vs2017/cuda2GLCore.vcxproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="..\..\src\kernel.cu" />
+    <CudaCompile Include="..\..\src\postprocessing.cu" />
     <CudaCompile Include="..\..\src\rayHelpers.cu" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
